# android-server-lab

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: client.c  client.py  client_c  server.py
include/: curl_utils.h  osm_map.h  shared.h  tile_manager.h
src/: curl_utils.cpp  gui.cpp  main.cpp  map.cpp  osm_map.cpp  server.cpp  tile_manager.cpp
